devpanel: fix template viewer overflow issue

--- a/src/devpanel/inspector/template-info/template/window.css
+++ b/src/devpanel/inspector/template-info/template/window.css
@@ -3,14 +3,16 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  right: 0;
+  bottom: 0;
   margin: 0;
+  padding: 40px 0;
   text-align: center;
   white-space: nowrap;
   z-index: 10000;
   transform: translateZ(0);
   background: rgba(0, 0, 0, .2);
+  overflow: auto;
 }
 .window__wrapper:before
 {
@@ -24,11 +26,11 @@
   /* vertical center */
   position: relative;
   display: inline-block;
+  overflow: auto;
   vertical-align: middle;
 
   /* restore inherit properties */
   text-align: left;
-  white-space: normal;
 
   padding: 4px 8px;
   background: white;
